--- a/packages/mysql-agent/package.json
+++ b/packages/mysql-agent/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stacksleuth/mysql-agent",
-  "version": "0.2.1",
-  "description": "StackSleuth MySQL query instrumentation and performance monitoring agent",
+  "version": "0.2.2",
+  "description": "Advanced MySQL performance monitoring agent - Query optimization, index analysis, connection pool monitoring, slow query detection, and real-time database performance insights.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -22,7 +22,14 @@
     "database",
     "performance",
     "profiling",
-    "monitoring"
+    "monitoring",
+    "observability",
+    "apm",
+    "stacksleuth",
+    "real-time",
+    "analytics",
+    "optimization",
+    "instrumentation"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
@@ -46,5 +53,16 @@
     "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
     "directory": "packages/mysql-agent"
   },
-  "license": "MIT"
-} 
+  "license": "MIT",
+  "author": {
+    "name": "Jack",
+    "url": "https://github.com/Jack-GitHub12"
+  },
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "bugs": {
+    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
