--- a/packages/browser-agent/package.json
+++ b/packages/browser-agent/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stacksleuth/browser-agent",
-  "version": "0.2.1",
-  "description": "StackSleuth in-house browser automation agent for debugging and user simulation",
+  "version": "0.2.2",
+  "description": "Advanced browser automation and performance monitoring agent - Playwright/Puppeteer integration, website crawling, user interaction simulation, screenshot capture, and real-time debugging capabilities.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -25,7 +25,17 @@
     "debugging",
     "crawling",
     "testing",
-    "simulation"
+    "simulation",
+    "performance",
+    "monitoring",
+    "profiling",
+    "observability",
+    "apm",
+    "stacksleuth",
+    "real-time",
+    "analytics",
+    "optimization",
+    "instrumentation"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
@@ -52,5 +62,16 @@
     "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
     "directory": "packages/browser-agent"
   },
-  "license": "MIT"
-} 
+  "license": "MIT",
+  "author": {
+    "name": "Jack",
+    "url": "https://github.com/Jack-GitHub12"
+  },
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "bugs": {
+    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
