--- a/packages/performance-optimizer/package.json
+++ b/packages/performance-optimizer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stacksleuth/performance-optimizer",
-  "version": "0.2.1",
-  "description": "StackSleuth intelligent performance analysis and optimization recommendations",
+  "version": "0.2.2",
+  "description": "Intelligent performance optimization engine - Automated bottleneck detection, code optimization suggestions, resource optimization, and performance enhancement recommendations.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -25,7 +25,13 @@
     "analysis",
     "recommendations",
     "profiling",
-    "monitoring"
+    "monitoring",
+    "observability",
+    "apm",
+    "stacksleuth",
+    "real-time",
+    "analytics",
+    "instrumentation"
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1"
@@ -47,5 +53,16 @@
     "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
     "directory": "packages/performance-optimizer"
   },
-  "license": "MIT"
-} 
+  "license": "MIT",
+  "author": {
+    "name": "Jack",
+    "url": "https://github.com/Jack-GitHub12"
+  },
+  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "bugs": {
+    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
